cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: eszop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: arokasprz100/cart-service:latest
        resources:
          limits:
            memory: "300Mi"
            cpu: "200m"
        ports:
        - name: port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: eszop
spec:
  selector:
    app: cart
  ports:
  - name: port
    port: 80
    targetPort: 8080
