offers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers
  namespace: eszop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offers
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
      - name: offers
        image: arokasprz100/offers-service:latest
        resources:
          limits:
            memory: "300Mi"
            cpu: "200m"
        ports:
        - name: port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: offers-service
  namespace: eszop
spec:
  selector:
    app: offers
  ports:
  - name: port
    port: 80
    targetPort: 8080
