orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: eszop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: loniowsky/orders-service:latest
        resources:
          limits:
            memory: "300Mi"
            cpu: "200m"
        ports:
        - name: port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: eszop
spec:
  selector:
    app: orders
  ports:
  - name: port
    port: 80
    targetPort: 8080
