traefik-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: eszop
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: port
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: eszop
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: port
      - path: /orders-service
        backend:
          serviceName: orders-service
          servicePort: port
      - path: /offers-service
        backend:
          serviceName: offers-service
          servicePort: port
